[metadata]
name = vk_bot
version = 0.1
summary = Vk Bot Project
description-file =
    README.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Nikolay Makhotkin
author-email = nmakhotkin@mirantis.com

[files]
packages =
    vk_bot