[metadata]
name = vk_bot
version = 0.4
summary = Vk Bot Project
description-file =
    README.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Nikolay Makhotkin
author-email = nmakhotkin@mirantis.com

[files]
packages =
    vk_bot

[entry_points]
console_scripts =
    vkontakte-bot = vk_bot.cmd.start:main
